--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
           TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
-        run: python script.py
+        run: python script2.py
