--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Run script
         env:
           GOOGLE_SERVICE_ACCOUNT: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
-          TWITTER_BEARER_TOKEN: ${{ secrets.TWITTER_BEARER_TOKEN }}
+          TWITTER_BEARER_TOKEN2: ${{ secrets.TWITTER_BEARER_TOKEN2 }}
         run: python script2.py
